update ui for categories

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,10 +18,7 @@
           </div>
         </div>
       </form>
-      <table id="results">
-        <thead></thead>
-        <tbody></tbody>
-      </table>
+      <div id="results"></div>
     </div>
     <script src="./js/main.js"></script>
   </body>
